Fix some alignment issues on small screens

--- a/src/_sass/coming_soon.scss
+++ b/src/_sass/coming_soon.scss
@@ -53,6 +53,10 @@
   font-family: $font-family;
   color: #c0c0c0;
 
+  @include breakpoint(small) {
+    max-width: 75%;
+  }
+
   h1 {
     font-size: 6em;
     font-weight: 100;
